--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
         <link rel="stylesheet" href="./style/footer.css" />
         <link rel="stylesheet" href="./style/button.css" />
         <link rel="stylesheet" href="./style/button_add.css" />
+        <link rel="stylesheet" href="./style/particle.css">
+        <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     </head>
     <body>
+        <div id="particles-js"></div>
         <main>
             <header>
                 <h1>Generador de Arboles</h1>
@@ -145,4 +148,5 @@
         </main>
     </body>
     <script src="./js/scrip.js"></script>
+    <script src="./js/particle.js"></script>
 </html>
