--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
         <title>Arboles</title>
+        <link rel="icon" href="./image/icon.png" type="image/x-icon" />
         <link rel="stylesheet" href="./style/style.css" />
         <link rel="stylesheet" href="./style/footer.css" />
         <link rel="stylesheet" href="./style/button.css" />
         <link rel="stylesheet" href="./style/button_add.css" />
-        <link rel="stylesheet" href="./style/particle.css">
+        <link rel="stylesheet" href="./style/particle.css" />
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     </head>
     <body>
@@ -31,15 +32,32 @@
                     </p>
                 </div>
                 <div class="funcionamiento">
-                    <h2>
+                    <h3>
                         <strong>Funcionamiento</strong>
-                    </h2>
-                    <p>
-                        Para agregar un nodo, escribe el nombre del nodo en el campo de texto y da clic en el botón
-                        "Agregar Nodo". <br> </br>Para agregar una conexión entre dos nodos, escribe el nombre del nodo de origen
-                        en el campo "De nodo" y el nombre del nodo destino en el campo "A nodo", después da clic en el
-                        botón "Agregar".
-                    </p>
+                    </h3>
+                    <div class="steps">
+                        <div>
+                            <span>1</span>
+                            <p>
+                                Para agregar un nodo, escribe el nombre del nodo en el campo de texto y da clic en el
+                                botón de agregar.
+                            </p>
+                        </div>
+                        <div>
+                            <span>2</span>
+                            <p>
+                                Para agregar una conexión entre dos nodos, escribe el nombre de los nodos en los campos
+                                de texto y da clic en el botón de agregar.
+                            </p>
+                        </div>
+                        <div>
+                            <span>3</span>
+                            <p>
+                                Para eliminar el árbol, da clic en el botón de limpiar. Esto eliminará todos los nodos y
+                                conexiones.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </section>
             <div id="controls">
