--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
-        <title>Arboles</title>
+        <title>Árboles</title>
         <link rel="icon" href="./image/icon.png" type="image/x-icon" />
         <link rel="stylesheet" href="./style/style.css" />
         <link rel="stylesheet" href="./style/footer.css" />
@@ -17,7 +17,7 @@
         <div id="particles-js"></div>
         <main>
             <header>
-                <h1>Generador de Arboles</h1>
+                <h1>Generador de Árboles</h1>
             </header>
             <section class="Info_Content">
                 <div class="Info">
